# inspect-kathara

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: router_troubleshooting.md
examples/router_troubleshoot/: README.md  dataset.yaml  router_troubleshoot.py  scorer.py  tools.py
examples/router_troubleshoot/scenarios/local_network/: compose.yaml  lab.conf  management.startup  pc2.startup
examples/router_troubleshoot/scenarios/local_network/topology/: lab.conf  pc1.startup  router.startup
examples/router_troubleshoot/scenarios/local_network/topology/pc1/etc/: pc1.conf
src/images/: nika-base.dockerfile  nika-frr.dockerfile  nika-influxdb.dockerfile  nika-nginx.dockerfile  nika-ryu.dockerfile  nika-wireguard.dockerfile
src/inspect_kathara/: __init__.py  _registry.py  _util.py  compose_generator.py  sandbox.py
tests/: test_sandbox.py  test_startup.py  test_util.py
